# commandpy

./: .gitignore  README.md  pyproject.toml  testing.py
commandpy/: __init__.py  command.py  decorator.py  engine.py  exceptions.py  group.py  injectcommand.py  injected_command.py  passcommand.py  protocols.py
compy/: __init__.py  command.py  decorator.py  engine.py  group.py  injected_command.py  parse.py  passcommand.py  protocols.py
examples/: command_line_parser.py  simple_command.py
tests/: test_commands.py  test_compy.py  test_create_commands.py  test_engine.py  test_groups.py  test_parsing.py  test_passcommand.py
