[tool.poetry]
name = "commandpy"
version = "0.2.0"
description = ""
authors = ["iRedSC"]

[tool.poetry.dependencies]
python = "^3.10"
tokenstream = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
